--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ github_username:  graemeo
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-hacker
 gems:
   - jekyll-feed
 exclude:
