--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: > # this means to ignore newlines until "baseurl:"
   It's not about how good you can code,
   it's about how good you can work with others to code...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://graemeo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  graemeo
 github_url: https://github.com/
 # Build settings
